2005-11-30  Derek Price  <derek@ximbiot.com>

	* server.c (server_base_checkout): Accept poptions argument & resend
	Base files when options have changed.
	* base.c, server.h: Change all references.
	* base.c (base_checkout): Accept poptions argument.
	* add.c, base.c, base.h, checkin.c, update.c: Change all references.
	* client.c (call_in_directory): Remove leading "./" from short_pathname
	when present.
	(update_entries): Output "C" & "M" lines when needed.
	(client_base_checkout): Allow Base files to be replaced.
	(client_base_merge): Try to pretend merges never happened when they
	have no effect.

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Other minor corrections.

	* difflib.c (merge): Add label argument.
	* base.c, client.c, difflib.h: Update all references.
	* client.c (update_entries, client_base_copy): Handle existance
	errors.
	* update.c (checkout_file): Set correct existance flags.
	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.

2005-11-29  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Compensate for new read-only Base files by forcing some
	directory removals.  Compensate for new output.

	* Makefile.am (cvs_SOURCES): Add difflib.[ch].
	* difflib.c, difflib.h: New files with content from...
	* rcscmds.c: ...here.
	* base.c (base_checkout): Move writable processing...
	(base_copy): ...here.
	(base_merge): New function.
	* add.c, base.h, checkin.c, update.c: Update all references.
	* client.c (last_merge, last_merge_conflict): Keep track of whether
	merges for update_entries.
	(update_entries): Use merge result.
	(client_base_copy): Handle new flags.
	(client_base_merge, handle_base_merge): New functions.
	(responses): Add "Base-merge" response.
	* server.h: Move some protos in from...
	* cvs.h: ...here and move some run.c stuff...
	* run.h: ...here.
	* filesubr.c: Reorg headers.
	* filesubr.h: Give standalone API.  Move copy_file proto from cvs.h.